Fixed Actions section on Safari.

--- a/components/Actions/Actions.scss
+++ b/components/Actions/Actions.scss
@@ -36,7 +36,7 @@
     }
 
     .Actions-item {
-      flex: 1;
+      flex: 1 1 280px;
       padding: 20px 60px;
       text-align: center;
 
